# indonesia-food-price-intelligence

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run_pipeline.py
analysis/: data_validation.py  eda.py  forecast_experimentation.py
dashboard/public/data/: commodity_correlation.json  correlation_summary.json  forecast.json  geographic_disparity.json  price_trends.json  seasonal_patterns.json
docs/: LEARNINGS.md  data_validation.md  forecast_runbook.md  implementation-plan.md  insights_log.md  issues_log.md  model_methodology.md  wfp-food-price-intelligence-project-plan.md
docs/data/: data-understanding.md  metadata-indonesia-food-prices.csv  metadata-indonesia-markets.csv  wfp_markets_idn.csv
docs/wireframes/: wfp-wireframe-page1-price-trends-forecast.md  wfp-wireframe-page2-seasonal-patterns.md  wfp-wireframe-page3-geographic-disparity.md  wfp-wireframe-page4-commodity-signals.md
export/: export_json.py
forecast/: run_forecast.py
ingest/: config.py  load_raw.py
transform/: dbt_project.yml  profiles.yml
transform/models/exposures/: _exposures.yml
transform/models/marts/: _marts__models.yml  mart_commodity_correlation.sql  mart_correlation_summary.sql  mart_geo_disparity.sql  mart_price_trends.sql  mart_seasonal_patterns.sql  schema.yml
transform/models/sources/: _sources.yml
transform/models/staging/: _staging__models.yml  schema.yml  stg_food_prices.sql  stg_markets.sql
transform/seeds/: _seeds.yml  islamic_calendar.csv
transform/tests/: assert_filter_out_consistency.sql  assert_mart_rows_positive.sql
